--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <li>
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
-        </ul>        
-        
+        </ul>          
     </header>
     <main>
 
@@ -41,7 +40,7 @@
                 <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
         <section>
-            <!--<h2></h2>-->
+            <h2>Услуги</h2>
             <ul class="opis">
                 <li class="opis-box">
                     <h3 class="opis-title">Внимание к деталям</h3>
@@ -66,35 +65,35 @@
             </ul>
         </section>
         <section class="what">
-            <h2 class="what-title">Чем мы занимаемся</h2>
+            <h2 class="title">Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./img/box1.jpg" alt="Разработка" class="work" width="370"></li>
-                <li><img src="./img/box2.jpg" alt="Тестирование" class="work" width="370"></li>
-                <li><img src="./img/box3.jpg" alt="Дизайн" class="work" width="370"></li>
+                <li><img src="./images/box1.jpg" alt="Разработка" class="work" width="370"></li>
+                <li><img src="./images/box2.jpg" alt="Тестирование" class="work" width="370"></li>
+                <li><img src="./images/box3.jpg" alt="Дизайн" class="work" width="370"></li>
             </ul>
         </section>
         <section class="command">
-            <h2 class="what-title">Наша команда</h2>
+            <h2 class="title">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/man1.jpg" alt="Игорь Демьяненко"  width="270">
-                    <h3 class="fio">Игорь Демьяненко</h3>
-                    <p class="job">Product Designer</p>
+                    <img src="./images/man1.jpg" alt="Игорь Демьяненко"  width="270">
+                    <h3 class="command-fio">Игорь Демьяненко</h3>
+                    <p class="command-job">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./img/man2.jpg" alt="Ольга Репина" width="270">
-                    <h3 class="fio">Ольга Репина</h3>
-                    <p class="job">Frontend Developer</p>
+                    <img src="./images/man2.jpg" alt="Ольга Репина" width="270">
+                    <h3 class="command-fio">Ольга Репина</h3>
+                    <p class="command-job">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/man3.jpg" alt="Николай Тарасов" width="270">
-                    <h3 class="fio">Николай Тарасов</h3>
-                    <p class="job">Marketing</p>
+                    <img src="./images/man3.jpg" alt="Николай Тарасов" width="270">
+                    <h3 class="command-fio">Николай Тарасов</h3>
+                    <p class="command-job">Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/man4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3 class="fio">Михаил Ермаков</h3>
-                    <p class="job">UI Designer</p>
+                    <img src="./images/man4.jpg" alt="Михаил Ермаков" width="270">
+                    <h3 class="command-fio">Михаил Ермаков</h3>
+                    <p class="command-job">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -108,7 +107,7 @@
                         <a href="https://goo.gl/maps/PgkVzutxJQpAyMBn6" target="_blank" rel="noopener, nofollow">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                     <li>
-                        <a href="mailto:info@example.com">info@example.com</a>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
                         <a href="tel:+380961111111">+38 096 111 11 11</a>
