--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="hero-btn" type="button">Заказать услугу</button>
         </section>
         <section>
-            <h2>Услуги</h2>
+            <h2 class="hidden">Услуги</h2>
             <ul class="opis">
                 <li class="opis-box">
                     <h3 class="opis-title">Внимание к деталям</h3>
